[DEV]image 수정 보안